--- a/tutorial_play_the_game.ipynb
+++ b/tutorial_play_the_game.ipynb
@@ -4,29 +4,36 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'learntools'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlearntools\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m \u001b[39mimport\u001b[39;00m binder\n\u001b[1;32m      2\u001b[0m binder\u001b[39m.\u001b[39mbind(\u001b[39mglobals\u001b[39m())\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlearntools\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mex3\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'learntools'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from learntools.core import binder\n",
     "binder.bind(globals())\n",
     "from learntools.python.ex3 import *"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# get board at next step if agent drops piece in selected column\n",
+    "def drop_piece(grid, col, piece, config):\n",
+    "    next_grid = grid.copy()\n",
+    "    for row in range(config.rows-1, -1, -1):\n",
+    "        if next_grid[row][col] == 0:\n",
+    "            break\n",
+    "        next_grid[row][col] = piece\n",
+    "        return next_grid\n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('.venv': venv)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -40,12 +47,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bb669d63a712ce9ff31e1ab5622fcfc2e0a4eb6f8fa0aa60ca3d0a306939953d"
+    "hash": "48248a1161b88123b44d0112d7461977d164c5e662e78a6ad6e4f387ddd91fa0"
    }
   }
  },
