resolving imports and IDE warnings

--- a/fastai_exercises/fast-ai-chapter02-model-to-production.ipynb
+++ b/fastai_exercises/fast-ai-chapter02-model-to-production.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install requests"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [
@@ -33,27 +24,12 @@
     }
    ],
    "source": [
-    "pip install wget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [403]>"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "request('GET','http://localhost:5000/')"
+    "'''\n",
+    "# Check if these need to be installed\n",
+    "pip install wget\n",
+    "pip install requests\n",
+    "pip install azure-cognitiveservices-search-imagesearch\n",
+    "'''"
    ]
   },
   {
@@ -63,30 +39,22 @@
    "outputs": [],
    "source": [
     "import os as os\n",
-    "from fastcore.utils import *\n",
     "from requests import request\n",
+    "# request('GET','http://localhost:5000/')\n",
     "# TODO : Fix this trash => Ugh, hardcoding my key for now lol\n",
     "key = os.environ.get('AZURE_SEARCH_KEY', '2414bd8a0aaa4f609964be7106a58890')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install azure-cognitiveservices-search-imagesearch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "from azure.cognitiveservices.search.imagesearch import ImageSearchClient as api\n",
     "from msrest.authentication import CognitiveServicesCredentials as auth\n",
+    "from fastai.vision.core import L #foundation.py\n",
     "\n",
     "def search_images_bing(key, term, min_sz=128, max_images=150):    \n",
     "     params = {'q':term, 'count':max_images, 'min_height':min_sz, 'min_width':min_sz}\n",
@@ -98,26 +66,6 @@
     "#      for each in search_results['value']:\n",
     "#            print(each)\n",
     "     return L(search_results['value'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.search_images_bing(key, term, min_sz=128, max_images=150)>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "search_images_bing"
    ]
   },
   {
@@ -144,26 +92,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/mton/Documents/GitHub/JupyterJeep/fastai_exercises'"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -175,30 +103,26 @@
     "dir = download(ims[0])\n",
     "print(dir)\n",
     "\n",
-    "im = Image.open(dir)\n",
-    "im.to_thumb(128, 128)\n",
-    "\n"
+    "im = Image.open(dir)  # type: ignore\n",
+    "im.to_thumb(128, 128)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bears\n",
-      "Bears/grizzly\n",
-      "Bears/black█████\n",
-      "Bears/teddys███\n",
-      "███████████\r"
+      "Bears\n"
      ]
     }
    ],
    "source": [
     "from fastai.vision.utils import download_images\n",
+    "from fastcore.utils import Path\n",
     "\n",
     "bear_types = 'grizzly', 'black', 'teddys'\n",
     "path = Path('Bears')\n",
@@ -215,24 +139,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfastai\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mvision\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m get_image_files\n\u001b[0;32m----> 2\u001b[0m fns \u001b[39m=\u001b[39m get_image_files(path)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'path' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('grizzly', 'black', 'teddys')\n",
+      "328\n",
+      "0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(#0) []"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from fastai.vision.utils import get_image_files\n",
-    "fns = get_image_files(path)"
+    "from fastai.vision.utils import verify_images\n",
+    "print(bear_types)\n",
+    "path = Path('Bears')\n",
+    "fns = get_image_files(path)\n",
+    "# originally 384 imaged\n",
+    "print(len(fns.items))\n",
+    "# Some downloads will be corrupt, let's check for them\n",
+    "failed = verify_images(fns)\n",
+    "print(len(failed.items))\n",
+    "# Some downloads will be corrupt, let's check for them\n",
+    "# 328 after removing 56 corrupt images\n",
+    "failed.map(Path.unlink)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastai.vision.utils import DataBlock\n",
+    "from fastai.vision.data import ImageBlock\n",
+    "from fastai.vision.utils import CategoryBlock\n",
+    "from fastai.vision.utils import get_image_files\n",
+    "from fastai.vision.utils import RandomSplitter\n",
+    "from fastai.vision.utils import parent_label\n",
+    "from fastai.vision.augment import Resize\n",
+    "\n",
+    "bears = DataBlock(\n",
+    "    blocks=(ImageBlock, CategoryBlock),   # type: ignore\n",
+    "    get_items=get_image_files, \n",
+    "    splitter=RandomSplitter(valid_pct=0.2, seed=42), # set seed so that the 20% validation data is always the same\n",
+    "    get_y=parent_label, # y is the label, i.e. the dependent variable to x\n",
+    "    item_tfms=Resize(128)  # type: ignore : tensors have to be the same size, Preprocess and Resize to 128x128\n",
+    ")"
    ]
   }
  ],
