using Fastai tools to clean data via change (move file)

--- a/fastai_exercises/fast-ai-chapter02-model-to-production.ipynb
+++ b/fastai_exercises/fast-ai-chapter02-model-to-production.ipynb
@@ -669,10 +669,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cleaner >> count 21\n",
+      "cleaner >> delete 0\n",
+      "cleaner >> changed 1\n",
+      "cleaner >> id 0 cat grizzly\n"
+     ]
+    }
+   ],
    "source": [
+    "print(f\"cleaner >> count {len(cleaner.fns.items)}\")\n",
     "\n",
     "# delete teddy bear images with children occluding the foreground and black/grizzly bears mixed in\n",
     "print(f\"cleaner >> delete {len(cleaner.delete())}\")\n",
@@ -682,12 +694,12 @@
     "print(f\"cleaner >> changed {len(cleaner.change())}\")\n",
     "for idx,cat in cleaner.change():\n",
     "    print(f\"cleaner >> id {idx} cat {cat}\")\n",
-    "    shutil.move(str(cleaner.fnx[idx], path/cat)  # type: ignore)"
+    "    shutil.move(str(cleaner.fns[idx]), path/cat)   # type: ignore "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
