TODO : resolve pywidget issues

--- a/fastai_exercises/fast-ai-chapter02-model-to-production.ipynb
+++ b/fastai_exercises/fast-ai-chapter02-model-to-production.ipynb
@@ -474,25 +474,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cd6aadc1a6d4ecd9104e8f778a296a6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FileUpload(value=(), description='Upload')"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#from fastai.vision.all import *\n",
     "#from fastai.vision.widgets import *\n",
@@ -504,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,25 +511,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "921058fdd8324e2489db18966ac4f2bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "out_pl = widgets.Output()\n",
     "out_pl.clear_output()\n",
@@ -558,32 +526,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fe534f1e79d499c8109dc9e71521703",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Classify', style=ButtonStyle())"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prediction: grizzly; Probability: 0.9449\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pred, pred_idx, probs = learn_inf.predict(imgPathHack)\n",
     "\n",
@@ -606,6 +551,33 @@
     "\n",
     "btn_run.on_click(on_click_classify)\n",
     "btn_run # type: ignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4d1b9ca8c0b48efb6e8564aff90f730",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='Select your bear'), FileUpload(value=(), description='Upload'), Button(description…"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from fastai.vision.widgets import VBox\n",
+    "\n",
+    "VBox([widgets.Label('Select your bear'), btn_upload, btn_run, out_pl, lbl_pred])\n"
    ]
   }
  ],
