find distance between mean and validation set

--- a/fastai_exercises/fast-ai-chapter04-under-the-hood.ipynb
+++ b/fastai_exercises/fast-ai-chapter04-under-the-hood.ipynb
@@ -1159,6 +1159,7 @@
     "# This is what peak number 3 looks like lol\n",
     "# output is wispy and willowy where images disagree and solid where they agree\n",
     "# Just like Tesla FSD Beta visualization lol\n",
+    "# TODO : verify that mean == average; also difference between mean, median and mode\n",
     "show_image(mean3)"
    ]
   },
@@ -1333,10 +1334,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SHAPE] 3 => torch.Size([6131, 28, 28]) # training set \n",
+      "[SHAPE] 7 => torch.Size([6265, 28, 28]) # training set\n",
+      "[SHAPE] 3 => torch.Size([1010, 28, 28]) # validation set \n",
+      "[SHAPE] 7 => torch.Size([1028, 28, 28]) # validation set\n"
+     ]
+    }
+   ],
+   "source": [
+    "# validation set : luckily MNIST is already split into train and valid\n",
+    "valid_3_files = (path/'valid'/'3').ls() # type: ignore\n",
+    "valid_3_tens = torch.stack([tensor(Image.open(o)) for o in valid_3_files])\n",
+    "# TODO : why do we have to convert to float? since we are dividing by 255 that should auto convert to float\n",
+    "# maybe we want to be explicit about the conversion?\n",
+    "valid_3_tens = valid_3_tens.float()/255\n",
+    "\n",
+    "valid_7_files = (path/'valid'/'7').ls() # type: ignore\n",
+    "valid_7_tens = torch.stack([tensor(Image.open(o)) for o in valid_7_files])\n",
+    "valid_7_tens = valid_7_tens.float()/255\n",
+    "\n",
+    "# Good habit to verify tensor SHAPES as you go\n",
+    "print(f'[SHAPE] 3 => {stacked_threes.shape} # training set \\n[SHAPE] 7 => {stacked_sevens.shape} # training set')\n",
+    "print(f'[SHAPE] 3 => {valid_3_tens.shape} # validation set \\n[SHAPE] 7 => {valid_7_tens.shape} # validation set')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.11143654584884644 distance between single image [3] and single [mean3] image\n",
+      "tensor([0.1634, 0.1145, 0.1363,  ..., 0.1105, 0.1111, 0.1640]) \n",
+      "torch.Size([1010]) # shape of valid_3_dist\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mnist_distance(a, b):\n",
+    "    # (a-b) is element wise subtraction; pytorch broadcasting! makes tensor code much easier to write\n",
+    "    # broadcasting expands the element with the smaller rank to match the larger rank\n",
+    "    # TODO : here a single scalar (a) is expanded to match array (b) ... but what if (a) is a vector?\n",
+    "    # ANSWER : it actually accumulates tensor([1,2,3]) + tensor(1) + tensor(3) = tensor([5,6,7])\n",
+    "    # Broadcasting is done in C on cpu or cuda on gpu and is 10ks or millions of times faster than python\n",
+    "    # and is the most IMPORTANT feature of pytorch\n",
+    "\n",
+    "    # (-1, -2) is a tuple of x,y axes to sum over from shape (num of images (0 or -3 lol), x pixels(-2), y pixels(-1))\n",
+    "    # In other words for every image we averaged the intensity of all pixels in each image using mean()\n",
+    "    # TODO : assumes that tensor shape is 3 dimensional ... what if it is 4 dimensional? Track this implicitly?\n",
+    "    return (a-b).abs().mean((-1, -2))\n",
+    "\n",
+    "valid_3_dist = mnist_distance(valid_3_tens, mean3)\n",
+    "\n",
+    "print(f'{mnist_distance(a_3, mean3)} distance between single image [3] and single [mean3] image')\n",
+    "print(f'{valid_3_dist} \\n{valid_3_dist.shape} # shape of valid_3_dist')\n"
+   ]
   }
  ],
  "metadata": {
