import search_images_bing from fastbook fix

--- a/fastai_exercises/fast-ai-chapter02-model-to-production.ipynb
+++ b/fastai_exercises/fast-ai-chapter02-model-to-production.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,29 +43,6 @@
     "# request('GET','http://localhost:5000/')\n",
     "# TODO : Fix this trash => Ugh, hardcoding my key for now lol\n",
     "key = os.environ.get('AZURE_SEARCH_KEY', '2414bd8a0aaa4f609964be7106a58890')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from azure.cognitiveservices.search.imagesearch import ImageSearchClient as api\n",
-    "from msrest.authentication import CognitiveServicesCredentials as auth\n",
-    "from fastai.vision.core import L #foundation.py\n",
-    "\n",
-    "def search_images_bing(key, term, min_sz=128, max_images=150):    \n",
-    "     params = {'q':term, 'count':max_images, 'min_height':min_sz, 'min_width':min_sz}\n",
-    "     headers = {\"Ocp-Apim-Subscription-Key\":key}\n",
-    "     search_url = \"https://api.bing.microsoft.com/v7.0/images/search\"\n",
-    "     response = request('GET', search_url, headers=headers, params=params)\n",
-    "     response.raise_for_status()\n",
-    "     search_results = response.json()\n",
-    "#      for each in search_results['value']:\n",
-    "#            print(each)\n",
-    "     return L(search_results['value'])"
    ]
   },
   {
@@ -82,6 +59,11 @@
     }
    ],
    "source": [
+    "from azure.cognitiveservices.search.imagesearch import ImageSearchClient as api\n",
+    "from msrest.authentication import CognitiveServicesCredentials as auth\n",
+    "from fastai.vision.core import L #foundation.py\n",
+    "from fastbook import search_images_bing\n",
+    "\n",
     "results = search_images_bing(key, 'grizzly bear')\n",
     "ims = results.attrgot('contentUrl')\n",
     "print(f\"search result returned [{len(ims)}] content urls\")"
@@ -89,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +89,7 @@
        "<PIL.Image.Image image mode=RGB size=128x85>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -358,13 +340,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b360226fc3c418693b898969fafbb67",
+       "model_id": "3c70506d0fcc44b3902f97c2e8439382",
        "version_major": 2,
        "version_minor": 0
       },
@@ -555,13 +537,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4d1b9ca8c0b48efb6e8564aff90f730",
+       "model_id": "0f134d1233cb4217a2963c725001e62c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -569,15 +551,75 @@
        "VBox(children=(Label(value='Select your bear'), FileUpload(value=(), description='Upload'), Button(description…"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from fastai.vision.widgets import VBox\n",
+    "from fastai.vision.widgets import VBox, widget\n",
     "\n",
+    "# TDDO : Why isn't this presenting the widgets in a vertical stack? \n",
     "VBox([widgets.Label('Select your bear'), btn_upload, btn_run, out_pl, lbl_pred])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a5a80496f3d6407fb79c6dcc5f7bfd8b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='Puppy'), Output(layout=Layout(max_width='192px'))))"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from fastai.vision.all import * # type: ignore\n",
+    "from fastai.vision.widgets import widget, Image\n",
+    "\n",
+    "im = Image.open('images/grizzly.jpg').to_thumb(256,512) # type: ignore\n",
+    "\n",
+    "VBox([widgets.HTML('Puppy'), widget(im, max_width=\"192px\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install voila"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enabling: voila\n",
+      "- Writing config: /Users/mton/miniconda3/envs/torch-gpu/etc/jupyter\n",
+      "    - Validating...\n",
+      "      voila 0.4.0 \u001b[32mOK\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter serverextension enable --sys-prefix voila"
    ]
   }
  ],
