--- a/fast-ai-chapter06-other-computer-vision-problems.ipynb
+++ b/fast-ai-chapter06-other-computer-vision-problems.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -229,45 +229,49 @@
     }
    ],
    "source": [
+    "from fastai.vision.data import DataBlock\n",
+    "\n",
     "# Create new columns and use them to do calculations\n",
     "df1 = pd.DataFrame()\n",
     "df1['a'] = [1,2,3, 4]\n",
     "df1['b'] = [10, 20, 30, 40]\n",
     "sum_column = df1['a'] + df1['b']\n",
-    "print(f'--[a_column]--\\n{df1[\"a\"]}\\n--[b_column]--\\n{df1[\"b\"]}\\n--[sum_column]--\\n{sum_column}')"
+    "print(f'--[a_column]--\\n{df1[\"a\"]}\\n--[b_column]--\\n{df1[\"b\"]}\\n--[sum_column]--\\n{sum_column}')\n",
+    "\n",
+    "\n",
+    "dblock = DataBlock()\n",
+    "dsets = dblock.datasets(df1)\n",
+    "dsets.train[0]\n",
+    "# TODO : Why isn't there a valid set? Set up one\n",
+    "#dsets.valid[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--[train]--\n",
-      "(fname                  009819.jpg\n",
-      "labels      diningtable chair cat\n",
-      "is_valid                     True\n",
-      "Name: 4938, dtype: object, fname                  009819.jpg\n",
-      "labels      diningtable chair cat\n",
-      "is_valid                     True\n",
-      "Name: 4938, dtype: object)\n",
-      "--[valid]--\n",
-      "(fname       008843.jpg\n",
-      "labels             car\n",
-      "is_valid          True\n",
-      "Name: 4435, dtype: object, fname       008843.jpg\n",
-      "labels             car\n",
-      "is_valid          True\n",
-      "Name: 4435, dtype: object)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(a          2\n",
+       " b         20\n",
+       " fname      2\n",
+       " labels    20\n",
+       " Name: 1, dtype: int64,\n",
+       " a          2\n",
+       " b         20\n",
+       " fname      2\n",
+       " labels    20\n",
+       " Name: 1, dtype: int64)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from fastai.vision.data import DataBlock\n",
-    "\n",
     "dblock = DataBlock()\n",
     "dsets = dblock.datasets(df)\n",
     "\n",
@@ -275,14 +279,12 @@
     "# the label ... because the DataBlock assumes we have :\n",
     "# - input\n",
     "# - target\n",
-    "print(f'--[train]--\\n{dsets.train[0]}\\n--[valid]--\\n{dsets.valid[0]}')\n",
-    "#dsets.train[0]\n",
-    "#dsets.valid[0]\n"
+    "print(f'--[train]--\\n{dsets.train[0]}\\n--[valid]--\\n{dsets.valid[0]}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -290,22 +292,26 @@
      "output_type": "stream",
      "text": [
       "--[train]--\n",
-      "('003865.jpg', 'diningtable person chair bottle')\n",
+      "(Path('/Users/mton/.fastai/data/pascal_2007/train/000162.jpg'), ['tvmonitor', 'person'])\n",
       "--[valid]--\n",
-      "('000772.jpg', 'dog')\n"
+      "(Path('/Users/mton/.fastai/data/pascal_2007/train/002342.jpg'), ['person'])\n"
      ]
     }
    ],
    "source": [
     "# We will need to capture explicitly from the DataFrame :\n",
     "# - 'fname' the image file name\n",
-    "def get_fname(row):\n",
-    "    return row['fname']\n",
+    "def get_image_path(row):\n",
+    "    #return row['fname']\n",
+    "    # we actually need the path name to open the image\n",
+    "    return path/'train'/row['fname']\n",
     "# - 'labels' the list of labels\n",
     "def get_labels(row):\n",
-    "    return row['labels']\n",
+    "    #return row['labels']\n",
+    "    # we actually need to split the labels on spaces\n",
+    "    return row['labels'].split(' ')\n",
     "\n",
-    "dblock=DataBlock(get_x=get_fname, get_y=get_labels)\n",
+    "dblock=DataBlock(get_x=get_image_path, get_y=get_labels)\n",
     "dsets=dblock.datasets(df)\n",
     "\n",
     "print(f'--[train]--\\n{dsets.train[0]}\\n--[valid]--\\n{dsets.valid[0]}')"
@@ -313,26 +319,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lambda is a keyword shortcut for defining an anonymous function inline\n",
+    "# however they aren't compatible with serialization (saving and loading)\n",
+    "# i.e. if you want to export your Learner after training you can't use lambda\n",
+    "# Lambda are not serializable because:\n",
+    "# - they are anonymous and not bound to a name or object in memory\n",
+    "# - lambda functions are also stateless and have no environment/context ...\n",
+    "#   storing and retrieving the state of a lambda function is not possible\n",
+    "'''\n",
+    "dblock = DataBlock(get_x=lambda r:r['fname'], get_y=lambda r:r['labels'])\n",
+    "dsets = dblock.datasets(df)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"\\n#dblock = DataBlock(get_x=lambda r:r['fname'], get_y=lambda r:r['labels'])\\n#dsets = dblock.datasets(df)\\n#dsets.train[0]\\n\""
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--[train]--\n",
+      "(PILImage mode=RGB size=500x346, TensorMultiCategory([0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 1.,\n",
+      "                     0., 0., 0., 0., 0.]))\n",
+      "--[valid]--\n",
+      "(PILImage mode=RGB size=500x333, TensorMultiCategory([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 1.,\n",
+      "                     0., 0., 0., 0., 0.]))\n",
+      "--[train 20]--\n",
+      "['aeroplane', 'bicycle', 'bird', 'boat', 'bottle', 'bus', 'car', 'cat', 'chair', 'cow', 'diningtable', 'dog', 'horse', 'motorbike', 'person', 'pottedplant', 'sheep', 'sofa', 'train', 'tvmonitor']\n",
+      "--[valid 20]--\n",
+      "['aeroplane', 'bicycle', 'bird', 'boat', 'bottle', 'bus', 'car', 'cat', 'chair', 'cow', 'diningtable', 'dog', 'horse', 'motorbike', 'person', 'pottedplant', 'sheep', 'sofa', 'train', 'tvmonitor']\n"
+     ]
     }
    ],
    "source": [
-    "'''\n",
-    "#dblock = DataBlock(get_x=lambda r:r['fname'], get_y=lambda r:r['labels'])\n",
-    "#dsets = dblock.datasets(df)\n",
-    "#dsets.train[0]\n",
-    "'''"
+    "from fastai.vision.data import ImageBlock, MultiCategoryBlock\n",
+    "\n",
+    "# actually open the images and convert to tensors\n",
+    "dblock = DataBlock(\n",
+    "    # ImageBlock works fine because we have a file path\n",
+    "    # But... MultiCategoryBlock is needed because we have multiple labels\n",
+    "    blocks=(ImageBlock, MultiCategoryBlock), # type:ignore\n",
+    "    get_x=get_image_path,\n",
+    "    get_y=get_labels)\n",
+    "\n",
+    "dsets = dblock.datasets(df)\n",
+    "# unlike with CategoryBlock where a single int is returned, \n",
+    "# MultiCategoryBlock returns a list of labels\n",
+    "# We have a list of 0s, with a 1 where a category is present\n",
+    "# TODO : What is one-hot encoding?\n",
+    "# Answer : https://en.wikipedia.org/wiki/One-hot\n",
+    "# In digital circuits and machine learning, a one-hot is a group of bits among \n",
+    "# which the legal combinations of values are only those with a \n",
+    "# single high (1) bit and all the others low (0).[1] A similar implementation \n",
+    "# in which all bits are '1' except one '0' is sometimes called one-cold\n",
+    "# TODO : How is the list of 0s and 1s created?  How is the length determined?\n",
+    "# Pytorch requires tensors, and everything has to be the same size/length\n",
+    "\n",
+    "print(f'--[train]--\\n{dsets.train[0]}\\n--[valid]--\\n{dsets.valid[0]}')\n",
+    "print(f'--[train {len(dsets.train.vocab)}]--\\n{dsets.train.vocab}\\n--[valid {len(dsets.valid.vocab)}]--\\n{dsets.valid.vocab}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'CategoryMap' object has no attribute 'len'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [79], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m idxs \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mwhere(dsets\u001b[39m.\u001b[39mtrain[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m]\u001b[39m==\u001b[39m\u001b[39m1.0\u001b[39m)[\u001b[39m0\u001b[39m] \u001b[39m# type: ignore\u001b[39;00m\n\u001b[1;32m      4\u001b[0m dsets\u001b[39m.\u001b[39mtrain\u001b[39m.\u001b[39mvocab[idxs]\n\u001b[0;32m----> 5\u001b[0m dsets\u001b[39m.\u001b[39;49mtrain\u001b[39m.\u001b[39;49mvocab\u001b[39m.\u001b[39;49mlen()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'CategoryMap' object has no attribute 'len'"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "idxs = torch.where(dsets.train[0][1]==1.0)[0] # type: ignore\n",
+    "dsets.train.vocab[idxs]"
    ]
   }
  ],
