--- a/fastai_exercises/fast-ai-chapter04-quiz.ipynb
+++ b/fastai_exercises/fast-ai-chapter04-quiz.ipynb
@@ -573,6 +573,23 @@
     "# - We call step() to update the weights\n",
     "# - We call zero_grad() to reset the gradients to 0"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "24) What does the DataLoader class do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The DataLoader class"
+   ]
   }
  ],
  "metadata": {
@@ -591,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Oct 13 2022, 16:12:19) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
