fastai bookmark and cleanup

--- a/fastai_exercises/fast-ai-chapter05-quiz.ipynb
+++ b/fastai_exercises/fast-ai-chapter05-quiz.ipynb
@@ -62,6 +62,25 @@
     "# 2. A CSV file with filenames and EXPLICIT labels - this is a requirement for multi-label datasets\n",
     "# TODO : what are potentially less common file/folder organization not set here?"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4) Look up the documentation for L and try using a few of the new methods that it adds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastai.vision.data import L\n",
+    "\n",
+    "L"
+   ]
   }
  ],
  "metadata": {
@@ -72,7 +91,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.13 (main, Oct 13 2022, 16:12:19) \n[Clang 12.0.0 ]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
