--- a/fastai_exercises/fast-ai-chapter06-other-computer-vision-problems.ipynb
+++ b/fastai_exercises/fast-ai-chapter06-other-computer-vision-problems.ipynb
@@ -580,7 +580,7 @@
     }
    ],
    "source": [
-    "# @audit-issue 👎 : fastai.vision.learner fails, use fastai.vision.all instead\n",
+    "# @audit-issue ❌ : fastai.vision.learner FAILS, use fastai.vision.all instead\n",
     "from fastai.vision.all import vision_learner, cnn_learner\n",
     "from fastai.vision.models import resnet18\n",
     "\n",
